# ai-journal

./: .gitignore  CLAUDE.md  journal.py  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
docs/: architecture.md  development.md  project-overview.md  user-stories.md
scripts/: test_real_import.py
src/: cli.py  journal_service.py  json_storage.py  markdown_importer.py  models.py  ollama_client.py  reflection.py  storage.py
src/experiments/: __init__.py
src/experiments/reflection_prompts/: __init__.py  experimental_prompts.py  feedback_collector.py  prompt_experimenter.py  results_storage.py  segmentation.py
tests/: test_cli.py  test_journal_service.py  test_json_storage.py  test_markdown_importer.py  test_models.py  test_ollama_client.py  test_ollama_client_integ.py  test_ollama_client_unit.py  test_reflection.py
