[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-journal"
version = "0.1.0"
dependencies = [
    "requests>=2.31.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselected by default)",
    "integration: marks tests as integration tests",
]
addopts = "-m 'not slow'"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]